# Stellar-IoT

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SUMMARY.md  bash.exe.stackdump  package-lock.json  package.json
apps/api/: .env.example  Cargo.toml  README.md  bash.exe.stackdump
apps/api/src/: analytics.rs  handlers.rs  main.rs  models.rs  routes.rs  services.rs  stellar_service.rs  webhook.rs  webhook_handlers.rs  webhook_service.rs
apps/web/: README.md  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/components/: AnalyticsDashboard.tsx  DeviceCard.tsx  DeviceRegistrationForm.tsx  Navbar.tsx  PayButton.tsx  PaymentModal.tsx  SessionManager.tsx
apps/web/src/lib/: stellar.ts
apps/web/src/providers/: WalletProvider.tsx
apps/web/src/services/: api.ts
apps/web/src/types/: index.ts
contracts/iot/: Cargo.toml  README.md
contracts/iot/src/: lib.rs  test.rs
contracts/iot/test_snapshots/test/: test_admin_withdraw_full_balance.1.json  test_admin_withdraw_partial_balance.1.json  test_bulk_amount_below_price_panics.1.json  test_bulk_credit_partially_consumed.1.json  test_bulk_credit_redeemed_on_request_access.1.json  test_bulk_credit_with_platform_fee.1.json  test_bulk_empty_list_panics.1.json  test_bulk_expired_credit_falls_back_to_payment.1.json  test_bulk_length_mismatch_panics.1.json  test_bulk_single_device_no_discount.1.json  test_bulk_tier2_discount_10_devices.1.json  (+34 more)
scripts/: deploy-contract.sh  setup.sh  test-all.sh
(+5 files in other folders)
